# Spark-Migration

./: README.md  pyproject.toml
Migration/: __init__.py  requirements.txt
Migration/engine/: __init__.py  connect.py  init_spark.py  init_task.py
Migration/logs/: __init__.py  global_logs.py  logs.py
Migration/schema/: __init__.py  control.py  model.py
Migration/service/: __init__.py  main.py
Migration/tasks/: __init__.py  task_db.py
