[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "spark_migration"
version = "0.1.0"
description = "Spark Migration: framework concorrente para migracao de dados PostgreSQL com Apache Spark."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=4.0,<5",
    "SQLAlchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
]
keywords = [
    "database",
    "migration",
    "postgresql",
    "pyspark",
    "spark",
    "etl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["Migration*"]
namespaces = true

[tool.setuptools.package-data]
Migration = ["drivers/*.jar"]
